# dpocv

./: README.md
apps/DNNProbe/: 0001-Add-function-to-get-layer-output-blob.patch  CMakeLists.txt  DNNProbe.cpp  README.txt
apps/DetectNet/: CMakeLists.txt  DpDetector.cpp  DpDetector.hpp  README.md  RunDetector.cpp  retinanet_halide.patch  retinanet_support.patch  run_detector.sh
apps/RetinaNetProbe/: CMakeLists.txt  RetinaNetProbe.cpp
modules/dp_bgmodel/: CMakeLists.txt  README.md
modules/dp_bgmodel/src/: BGModel.cpp  BGModel.hpp  BackgroundModeler.cpp  BasicRetinaFilter.cpp  BasicRetinaFilter.hpp  FastToneMapping.cpp  FastToneMapping.hpp  LogpolProjection.cpp  LogpolProjection.hpp  MagnoRetinaFilter.cpp  MagnoRetinaFilter.hpp  ParvoRetinaFilter.cpp  ParvoRetinaFilter.hpp  Retina.cpp  Retina.hpp  RetinaColor.cpp  RetinaColor.hpp  RetinaFilter.cpp  RetinaFilter.hpp  TemplateBuffer.hpp  TransientSegmentation.cpp  TransientSegmentation.hpp  precomp.hpp
modules/dp_tracking/: CMakeLists.txt
modules/dp_tracking/src/: CSRTScaleEstimation.cpp  CSRTSegmentation.cpp  CSRTUtils.cpp  CSRTracker.cpp  CSRTracker.hpp  FeatureColorName.cpp  FeatureSpace.h  HOGFeature.cpp  HaarFeature.cpp  MOSSETracker.cpp  MOSSETracker.hpp  MTTracker.cpp  MTTracker.hpp  ORF.cpp  ORF.h  ORFInternal.h  ORFNode.cpp  ORFParameter.cpp  ORFRandomTest.cpp  ORFTree.cpp  ORFUtils.cpp  Tracker.cpp  Tracker.hpp  precomp.hpp
modules/dp_tracking/unit_test/TrainORF/: CMakeLists.txt  TrainORF.cpp
test/Python/: MOT_GroundTruth.py  RetinaSpecificParameters.xml  TestBackground.py  TrackerBenchmark.py
(+2 files in other folders)
